2010-01-27  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Alexey Proskuryakov and Darin Adler.

        REGRESSION (r52082): Missing event handlers on JQuery demo page (33383)
        https://bugs.webkit.org/show_bug.cgi?id=33383
        <rdar://problem/7559449>

        * fast/events/bogus-event-listener-invalidation-expected.txt: Added.
        * fast/events/bogus-event-listener-invalidation.html: Added.

2010-02-04  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=25002
        When inserting a new paragraph, avoid nesting empty divs.  When
        pasting near the end of a paragraph, this prevents each paste
        command for getting nested one level deeper.

        Three paste tests have been rebaselined since this causes the pasted
        content to be outside the last div instead of inside.  E.g.,
        <div>foo<div>bar</div>[pasted content]</div> is now
        <div>foo<div>bar</div></div><div>[pasted content]</div>

        The new test verifies this behavior.

        * editing/inserting/paragraph-outside-nested-divs-expected.txt: Added.
        * editing/inserting/paragraph-outside-nested-divs.html: Added.
        * platform/mac/editing/pasteboard/paste-text-012-expected.txt:
        * platform/mac/editing/pasteboard/paste-text-013-expected.txt:
        * platform/mac/editing/pasteboard/paste-text-017-expected.txt:

2010-02-04  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Eric Seidel.

        1. Enhance quota-tracking.html: if sqlite automatically rolls back
        a transaction because of a statement failure, make sure the rest
        of the statements in the transaction are not executed.
        2. Fix the expectations for quota-tracking.html. Sqlite cannot
        recover from reaching a DB's max size.

        * storage/quota-tracking-expected.txt:
        * storage/quota-tracking.html:

2010-02-04  Csaba Osztrogonác  <ossy@webkit.org>
